# cowboy

./: .dockerignore  .env  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  Makefile  README.md  README_CN.md  docker-compose.e2e-llm-mock.yaml  docker-compose.yml  opencode.json  package-lock.json  package.json  pyproject.toml  vercel.json
.claude/: settings.local.json
.codex/: config.toml
.opencode/skills/cowboy/: SKILL.md
backend/: Cargo.toml  Dockerfile  README.md
backend/bot-manager-service/: Cargo.toml
backend/bot-manager-service/src/: main.rs
backend/bot-service/: Cargo.toml
backend/bot-service-test/: test_bot_service_e2e.py  test_player_agent_direct.py
backend/bot-service/python/: player_agent.py  requirements.txt
backend/bot-service/python/tests/: test_player_agent_integration.py  test_player_agent_integration_live_output.py  test_player_agent_unit.py  test_player_agent_update_timeout.py
backend/bot-service/src/: main.rs
backend/cowboy-common/: Cargo.toml
backend/cowboy-common/src/: lib.rs
backend/game-manager-service/: Cargo.toml
backend/game-manager-service/src/: main.rs
backend/game-service/: Cargo.toml
backend/game-service/src/: main.rs
backend/game-watcher-service/: Cargo.toml
backend/game-watcher-service/src/: main.rs
backend/timer-service/: Cargo.toml
backend/timer-service/src/: main.rs
backend/web-service/: Cargo.toml
backend/web-service/src/: main.rs
conf/: bot-manager-llm.yaml  bot-service-langsmith.yaml  bot-service-prompts.yaml  default-map.yaml
docs/: GAME_RULES.md  GAME_RULES_CN.md  HOW_TO_RUN_V2.md  HOW_TO_RUN_V2_CN.md  TEST_CASES.md  TEST_CASES_CN.md  TODO.md  TODO_CN.md  V2_DESIGN.md  V2_DESIGN_CN.md  V2_TASK_LIST.md  V2_TASK_LIST_CN.md  V3_API_CHANGES.md  V3_API_CHANGES_CN.md  V3_ARCHITECTURE_DESIGN.md  V3_ARCHITECTURE_DESIGN_CN.md  V3_TASK_LIST.md  V3_TASK_LIST_CN.md  V4_TASK_LIST.md  bot_feature.md  bot_feature_CN.md
frontend/: build.sh  config.js  game.js  index.html
frontend/assets/: styles.css
mcp/: GAME_RULES.md  GAME_RULES_CN.md  HOW_TO_USE.md  HOW_TO_USE_CN.md  pyproject.toml  requirements.txt
mcp/src/cowboy_mcp/: game_client.py  server.py  session.py  ws_client.py
mcp/src/cowboy_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
nginx/: start.sh
nginx/conf/: nginx.conf
openclaw/skills/cowboy/: SKILL.md
openclaw/skills/cowboy/references/: game-rules.md
openclaw/skills/cowboy/scripts/: wait_for_turn.py
scripts/: e2e_deepagents_json_output.sh  e2e_llm_connection_test.sh  e2e_llm_failure_speak.sh  e2e_player_agent_init_decide.sh  e2e_verify_bot_config_wiring.sh  live_llm_decide.sh  live_playwright_control.js  live_playwright_supervisor.js  llm_mock_server.py
skill/.claude-plugin/: plugin.json
skill/skills/cowboy/: SKILL.md
